CRUD de reservation - Ugo

--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8084
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+spring.application.name=VIP-Reservation
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/ReservationVehicule
+spring.datasource.username=ugo
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
