--- a/vehicule/src/main/resources/application.properties
+++ b/vehicule/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8083
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/Vehicule
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=Matheus
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
 
