--- a/vehicule/src/main/resources/application.properties
+++ b/vehicule/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Vehicule
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=Matheus
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
