--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ReservationVehicule
 spring.datasource.username=ugo
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.error.include-message=always
